slide/src/test/ui/error/variable/var_in_expr_pat.slide
!!!args
--expr-pat
!!!args

===in
1 + var
===in

~~~stdout
~~~stdout

~~~stderr
error[P0005]: Variables cannot be used in an expression pattern
  |
1 | 1 + var 
  |     ^^^ unexpected variable
  |     --- help: use a var pattern: `$var`
  |
~~~stderr

~~~exitcode
1
~~~exitcode
